--- a/index.html
+++ b/index.html
@@ -1,12 +1,48 @@
 <html>
-<p>ami fail</p>
+ <head>
+
+
+<title>Mehedi web portal</title>
+
+
+<link rel="stylesheet" href="style.css">
 
 
 
-<h1>halum</h1>
 
 
-<h2>alap</h2>
+
+
+
+
+ </head>
+
+<body>
+   <section>
+    <div class="length">
+
+        <h1><span class="friend">Welcome to Mehedi Website</span> </h1>
+        <h3>Civil Engineer
+         </h3>
+        <p>I am expert in Autocad 3D Design.I have also huge experiience in construction site.I am also expert in html css.I like to travel.Saint Martin tour is the best toour in my life.I am excited to explore new places in the world.I have a lot of dream.But most of the time I think about the purpose of life. </p>
+
+
+    </div><div class="length">
+    <img src="images/profile.png" alt=""></div>
+
+
+   </section>
+</body>
+
+
+
+
+
+
+
+
+
+
 
 
 
